# Game

./: .gitignore  Cargo.toml  Game.csproj  Game.sln  README.md  icon.png.import  icon.svg.import  project.godot
.github/workflows/: build.yml
Assets/Input/: InputManager.inputactions
Assets/Low Poly Free Vegetation Kit/Materials/: Color Pallet.mat  Grass.mat  Pine Tree Branch.mat  Plane.mat  Plant Leaf.mat  Water.mat
Assets/Materials/Effects/: Explosion.mat  ExplosionDistortion.mat  Hot Orange.mat
Assets/Materials/Player/: Aim Crosshair.mat  Look Indicator 1.mat  Look Indicator Arrow.mat
Assets/Materials/World/: Ground.mat  Wall.mat
Assets/Models/Player/: aimCrosshair.fbx  rotationIndicator.fbx
Assets/Models/Weapons/: weapon1.fbx
Assets/Prefabs/: Cube.prefab
Assets/Prefabs/Player/: Player.prefab
Assets/Scenes/: Game.unity  GameScene.unity  Gameplay.unity  Menu.unity  Start.unity
Assets/Scenes/Map Scenes/: TestWorld_b.unity
Assets/Scripts/Effects/: Explosion.cs
Assets/Scripts/Entity/: DamageCause.cs  IDamageable.cs  Target.cs
Assets/Scripts/Logger/: GameLogger.cs
Assets/Scripts/Network/: ClientNetworkTransform.cs  Preloader.cs
Assets/Scripts/Objects/: WeaponData.cs
Assets/Scripts/Player/: LocalPlayer.cs  (+1 more)
Assets/Settings/: HDRP High Fidelity.asset  Main Audio Mixer.mixer  SkyandFogSettingsProfile.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: default-2021.dwlt
assets/animations/: player.node  player_tree.nodetree
client/: Cargo.toml
client/assets/data/atlas/: ground_tiles.toml  player_animations.toml  ui_inventory.toml
client/src/: asset.rs  client.rs  main.rs  registry.rs
client/src/client/: camera.rs  state.rs  world.rs  y_sorting.rs
client/src/client/state/: ingame.rs  main_menu.rs
client/src/client/state/ingame/: grid_cursor.rs  hud.rs  main_camera.rs  remote_player.rs  remote_world.rs
client/src/client/state/ingame/inventory/: player_inventory.rs
client/src/client/state/main_menu/: home_screen.rs
client/structure/: asset_loading.canvas
common/: Cargo.toml
materials/maps/: walls.tres
scenes/: World.tscn  world.tscn
scenes/maps/: TestWorld.tscn
scenes/player/: LocalPlayer.tscn  Player.tscn
scenes/weapons/: Pistol.tscn
scripts/: GameWorld.cs  World.cs
scripts/weapon/: WeaponHolder.cs
src/: asset.rs  client.rs  common.rs  main.rs  registry.rs
src/client/: animation.rs  asset.rs  camera.rs  grid_cursor.rs  hotbar_ui.rs  ingame_ui.rs  local_player.rs  main_menu.rs  player.rs  player_animation.rs  remote_player.rs  state.rs  texture.rs  ui.rs  world.rs  y_sorting.rs
(+132 files in other folders)
