[package]
name = "game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"

[dependencies]
rand = "0.8.5"
#bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy = "0.11.3"
bevy-inspector-egui = "0.19.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }