[package]
name = "game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"

[dependencies]
rand = "0.8.5"
toml = "0.8.2"
serde = "1.0.188"
bevy = { version = "0.11.3", default-features = false, features = [
    "multi-threaded",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_render",
    "bevy_gizmos",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "filesystem_watcher",
    "default_font",
    "png",
    "serialize",
    "x11",
    "wayland"
] }
bevy-inspector-egui = "0.20.0"
bevy-inspector-egui-rapier = "0.9.0"
bevy_kira_audio = "0.17.0"
bevy_rapier2d = "0.22.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
