[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
toml = "0.8.10"
common = { path = "../common" }
serde = "1.0.196"
bevy = { version = "0.12.1", default-features = false, features = [
  "multi-threaded",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_winit",
  "bevy_render",
  "bevy_gizmos",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "default_font",
  "png",
  "serialize",
  "x11",
  "wayland",
] }
bevy-inspector-egui = "0.22.1"
bevy-inspector-egui-rapier = "0.9.0"
bevy_kira_audio = "0.18.0"
bevy_rapier2d = "0.24.0"
bevy_ecs_tilemap = "0.12.0"
